--- a/index.html
+++ b/index.html
@@ -542,6 +542,10 @@
                     <img class="folder" src="images/folder.png">
                     <p>Finals</p>
                 </div>
+		<div id="rabyte" class="icon-card">
+                    <img class="folder" src="images/explorer.png">
+                    <p>Proj_Rabyte</p>
+                </div>
                 <div class="box windows-2">
                     <div class="header" style="width: 550px;">
                         <img src="images/notepad.png">
